--- a/amd64/Dockerfile
+++ b/amd64/Dockerfile
@@ -22,7 +22,7 @@ ENV ADDITIONAL_FLAGS ""
 ENV GOPROXY ""
 
 RUN apt-get update \
-    && apt-get install -y curl sudo jq iputils-ping zip libssl-dev libcurl4-gnutls-dev zlib1g-dev gettext make build-essential python3-pip wget cmake clang perl psmisc \
+    && apt-get install -y curl sudo jq iputils-ping zip libssl-dev libcurl4-gnutls-dev zlib1g-dev gettext make build-essential python3-pip wget cmake clang perl psmisc software-properties-common \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
     && wget https://mirrors.edge.kernel.org/pub/software/scm/git/git-2.28.0.tar.gz && tar -xvzf git-2.28.0.tar.gz && cd git-2.28.0 && ./configure --prefix=/usr/ && make -j 8 && make install \
