--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,23 +15,23 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: knatnetwork
           password: ${{ secrets.GITHUB_TOKEN }}
     
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: knatnetwork
           password: ${{ secrets.DOCKERHUB_PASSWD }}
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Cache Docker layers
         uses: actions/cache@v3
@@ -42,12 +42,13 @@ jobs:
             ${{ runner.os }}-buildx-arm64
 
       - name: Build and push ARM64 Version
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: ./arm64/
           file: ./arm64/Dockerfile
           platforms: linux/arm64
           push: true
+          provenance: false
           build-args: GITHUB_RUNNER_VERSION=${{ github.event.inputs.github-runner-version }}
           tags: |
             ghcr.io/knatnetwork/github-runner-arm64:focal-${{ github.event.inputs.github-runner-version }}
@@ -67,23 +68,23 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: knatnetwork
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: knatnetwork
           password: ${{ secrets.DOCKERHUB_PASSWD }}
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
           
       - name: Cache Docker layers
         uses: actions/cache@v3
@@ -94,12 +95,13 @@ jobs:
             ${{ runner.os }}-buildx-amd64
 
       - name: Build and push AMD64 Version
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: ./amd64/
           file: ./amd64/Dockerfile
           platforms: linux/amd64
           push: true
+          provenance: false
           build-args: GITHUB_RUNNER_VERSION=${{ github.event.inputs.github-runner-version }}
           tags: |
             ghcr.io/knatnetwork/github-runner-amd64:focal-${{ github.event.inputs.github-runner-version }}
@@ -120,14 +122,14 @@ jobs:
       - build-amd64-version
     steps:
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: knatnetwork
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: knatnetwork
           password: ${{ secrets.DOCKERHUB_PASSWD }}
