--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -144,4 +144,4 @@ jobs:
           docker manifest create ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }} --amend ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }}-amd64 --amend ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }}-arm64
           docker manifest push ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }}
 
-          ./regctl-linux-amd64 image copy ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }} knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }} -v
+          ./regctl-linux-amd64 image copy ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }} knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }} -v info
