--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,13 +4,19 @@ on:
   workflow_dispatch:
     inputs:
       github-runner-version:
-        description: 'Version on github runner(in https://github.com/actions/runner), e.g: 2.290.0'
+        description: 'Version on github runner(in https://github.com/actions/runner), e.g: 2.309.0'
         required: true
-        default: '2.290.0'
+        default: '2.309.0'
 
 jobs:
-  build-arm64-version:
+  build-images:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        platform: [amd64, arm64]
+        code_name: [focal, jammy]
+
     steps:
       - uses: actions/checkout@v3
       
@@ -37,22 +43,22 @@ jobs:
         uses: actions/cache@v3
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-arm64-${{ github.sha }}
+          key: ${{ runner.os }}-buildx-${{ matrix.platform }}-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-buildx-arm64
+            ${{ runner.os }}-buildx-${{ matrix.platform }}
 
-      - name: Build and push ${{ github.event.inputs.github-runner-version }} ARM64 Version
+      - name: Build and push ${{ github.event.inputs.github-runner-version }} ${{ matrix.platform }} Version
         uses: docker/build-push-action@v3
         with:
-          context: ./arm64/
-          file: ./arm64/Dockerfile
-          platforms: linux/arm64
+          context: ./${{ matrix.code_name }}-${{ matrix.platform }}/
+          file: ./${{ matrix.code_name }}-${{ matrix.platform }}/Dockerfile
+          platforms: linux/${{ matrix.platform }}
           push: true
           provenance: false
           sbom: false
           build-args: GITHUB_RUNNER_VERSION=${{ github.event.inputs.github-runner-version }}
           tags: |
-            ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }}-arm64
+            ghcr.io/${{ github.repository }}:${{ matrix.code_name }}-${{ github.event.inputs.github-runner-version }}-${{ matrix.platform }}
 
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
@@ -62,64 +68,11 @@ jobs:
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
-  build-amd64-version:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: knatnetwork
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: knatnetwork
-          password: ${{ secrets.DOCKERHUB_PASSWD }}
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-          
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-amd64-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-amd64
-
-      - name: Build and push ${{ github.event.inputs.github-runner-version }} AMD64 Version
-        uses: docker/build-push-action@v3
-        with:
-          context: ./amd64/
-          file: ./amd64/Dockerfile
-          platforms: linux/amd64
-          push: true
-          provenance: false
-          sbom: false
-          build-args: GITHUB_RUNNER_VERSION=${{ github.event.inputs.github-runner-version }}
-          tags: |
-            ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }}-amd64
-            
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
   
   combine-two-images:
     runs-on: ubuntu-latest
     needs:
-      - build-arm64-version
-      - build-amd64-version
+      - build-images
     steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -136,16 +89,20 @@ jobs:
 
       - name: Get regctl
         run: |
-          wget -q https://github.com/regclient/regclient/releases/download/v0.4.5/regctl-linux-amd64
+          wget -q https://github.com/regclient/regclient/releases/download/v0.5.1/regctl-linux-amd64
           chmod +x regctl-linux-amd64
 
       - name: Combine two images on GHCR and sync to DockerHub
         run: |
-          docker manifest create ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }} --amend ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }}-amd64 --amend ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }}-arm64
-          docker manifest push ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }}
+          docker manifest create ghcr.io/${{ github.repository }}:focal-${{ github.event.inputs.github-runner-version }} --amend ghcr.io/${{ github.repository }}:focal-${{ github.event.inputs.github-runner-version }}-amd64 --amend ghcr.io/${{ github.repository }}:focal-${{ github.event.inputs.github-runner-version }}-arm64
+          docker manifest push ghcr.io/${{ github.repository }}:focal-${{ github.event.inputs.github-runner-version }}
+          docker manifest create ghcr.io/${{ github.repository }}:jammy-${{ github.event.inputs.github-runner-version }} --amend ghcr.io/${{ github.repository }}:jammy-${{ github.event.inputs.github-runner-version }}-amd64 --amend ghcr.io/${{ github.repository }}:jammy-${{ github.event.inputs.github-runner-version }}-arm64
+          docker manifest push ghcr.io/${{ github.repository }}:jammy-${{ github.event.inputs.github-runner-version }}
 
-          ./regctl-linux-amd64 image copy ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }} knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }} -v info
+          ./regctl-linux-amd64 image copy ghcr.io/${{ github.repository }}:focal-${{ github.event.inputs.github-runner-version }} ${{ github.repository }}:focal-${{ github.event.inputs.github-runner-version }} -v info
+          ./regctl-linux-amd64 image copy ghcr.io/${{ github.repository }}:jammy-${{ github.event.inputs.github-runner-version }} ${{ github.repository }}:jammy-${{ github.event.inputs.github-runner-version }} -v info
           
       - name: Update image latest tag
         run: |
-          ./regctl-linux-amd64 image copy ghcr.io/knatnetwork/github-runner:focal-${{ github.event.inputs.github-runner-version }} knatnetwork/github-runner:latest -v info
+          ./regctl-linux-amd64 image copy ghcr.io/${{ github.repository }}:jammy-${{ github.event.inputs.github-runner-version }} ${{ github.repository }}:latest -v info
+          ./regctl-linux-amd64 image copy ghcr.io/${{ github.repository }}:jammy-${{ github.event.inputs.github-runner-version }} ghcr.io/${{ github.repository }}:latest -v info
