--- a/noble-arm64/Dockerfile
+++ b/noble-arm64/Dockerfile
@@ -1,16 +1,16 @@
-FROM ubuntu:22.04 as env
+FROM ubuntu:24.04 as env
 
-ARG GITHUB_RUNNER_VERSION=2.286.1
+ARG GITHUB_RUNNER_VERSION=2.322.0
 ARG DEBIAN_FRONTEND=noninteractive
 
 WORKDIR /root
 RUN apt-get update && apt install wget -y
-RUN wget https://github.com/actions/runner/releases/download/v${GITHUB_RUNNER_VERSION}/actions-runner-linux-x64-${GITHUB_RUNNER_VERSION}.tar.gz \
-    && tar xzf ./actions-runner-linux-x64-${GITHUB_RUNNER_VERSION}.tar.gz && rm -f actions-runner-linux-x64-${GITHUB_RUNNER_VERSION}.tar.gz \
+RUN wget https://github.com/actions/runner/releases/download/v${GITHUB_RUNNER_VERSION}/actions-runner-linux-arm64-${GITHUB_RUNNER_VERSION}.tar.gz \
+    && tar xzf ./actions-runner-linux-arm64-${GITHUB_RUNNER_VERSION}.tar.gz && rm -f actions-runner-linux-arm64-${GITHUB_RUNNER_VERSION}.tar.gz \
     && sed -i '3,9d' ./config.sh \
     && sed -i '3,8d' ./run.sh
 
-FROM ubuntu:22.04 as runner
+FROM ubuntu:24.04 as runner
 
 ARG DEBIAN_FRONTEND=noninteractive
 ENV KMS_SERVER_ADDR ""
@@ -22,7 +22,7 @@ ENV ADDITIONAL_FLAGS ""
 ENV GOPROXY ""
 
 RUN apt-get update \
-    && apt-get install -y curl sudo jq iputils-ping zip libssl-dev libcurl4-gnutls-dev zlib1g-dev gettext make build-essential python3-pip wget cmake clang perl psmisc software-properties-common git 
+    && apt-get install -y git curl sudo jq iputils-ping zip gcc libssl-dev libcurl4-gnutls-dev zlib1g-dev make gettext wget docker-compose cmake clang perl psmisc software-properties-common
 
 # Install Docker binary
 RUN curl -fsSL https://get.docker.com -o get-docker.sh && sh get-docker.sh \
